# politicoresto

./: .codacy.yaml  .gitattributes  .gitignore  .vercelignore  CLAUDE.md  README.md  scratchpad.md
worker/: .env.example  .gitignore  Makefile  README.md  pyproject.toml  railway.toml
worker/scripts/: seed_insee_reference.py
worker/src/weighting/: __init__.py  calibration.py  estimation.py  http_app.py  pipeline.py  processor.py  score.py  settings.py  supabase_client.py  worker.py
worker/tests/differential/: test_iterative_vs_clip.py  test_samplics_parity.py
worker/tests/external_benchmark/: test_grid_bank.py  test_insee_calmar_style.py  test_r_survey_apistrat.py
worker/tests/external_benchmark/data/: apistrat_linear.csv  apistrat_small.csv  balanced_tight.csv  deville_sarndal_toy.csv  insee_calmar_style_4d.csv
worker/tests/external_benchmark/data/grid/: 1d_n100_mild_loose.csv  1d_n2000_none_loose.csv  1d_n20_severe_loose.csv  1d_n500_severe_tight.csv  2d_mix_2.csv  2d_mix_3.csv  2d_mix_4.csv  2d_n100_balanced.csv  2d_n2000_severe_loose.csv  2d_n500_mild.csv  3d_balanced_n1000.csv  3d_balanced_n200.csv  3d_balanced_n3000.csv  3d_n2000_mild.csv  3d_n500_mild.csv  3d_n500_severe_loose.csv  bounds_0p1_10.csv  (+17 more)
worker/tests/external_benchmark/scripts/: generate_apistrat.R  generate_deville_sarndal.R  generate_grid_bank.R  generate_insee_calmar.R
worker/tests/golden/: test_golden_scenarios.py
worker/tests/golden/test_golden_scenarios/: test_balanced_sample.yml  test_clipping_hits_bounds.yml  test_deville_sarndal_toy.yml  test_imbalanced_single_dim.yml  test_imbalanced_two_dims.yml
worker/tests/integration/: conftest.py  test_pipeline_end_to_end.py
worker/tests/property/: test_calibration_properties.py  test_score_properties.py
worker/tests/stress/: generator.py  r_oracle.py  test_random_panels.py
worker/tests/stress/scripts/: stress_oracle.R
worker/tests/unit/: test_calibration.py  test_calibration_cells.py  test_estimation.py  test_pipeline_priority.py  test_score.py  test_vercel_handler_auth.py
(+707 files in other folders)
